@@ -13,11 +13,6 @@
 # include "config.h"
 #endif
 
-/* _XOPEN_SOURCE is known to break compilation under OpenBSD. */
-#ifndef OPENBSD
-# define _XOPEN_SOURCE  500 /* for wcswidth() */
-#endif
-
 #include <stdio.h>
 #include <stdarg.h>
 
